724